--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
-@charset "UTF-8"
-.logo {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    max-width: 100%;
-    max-height: 100%;
+@charset "UTF-8";
+body {
+    background-color: rgb(rgb(145, 112, 76), green, blue);
+    font-family: Arial, Helvetica, sans-serif;
+}
+h1 {
+    color: rgb(255, 255, 255);
+}
+h2 {
+    color: rgb(255, 255, 255);
+}
+p {
+    color: rgb(255, 255, 255);
 }
