--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 @charset "UTF-8";
 body {
-    background-color: rgb(rgb(145, 112, 76), green, blue);
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(145, 112, 76);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 h1 {
     color: rgb(255, 255, 255);
+    background-color: rgb(88, 59, 27);
+    text-align: center;
+    padding: 10px;
+    width: 100%;
 }
 h2 {
     color: rgb(255, 255, 255);
+    text-align: left;
 }
 p {
     color: rgb(255, 255, 255);
