--- a/style.css
+++ b/style.css
@@ -4,16 +4,14 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 h1 {
-    color: rgb(255, 255, 255);
     background-color: rgb(88, 59, 27);
     text-align: center;
     padding: 10px;
     width: 100%;
 }
 h2 {
-    color: rgb(255, 255, 255);
     text-align: left;
 }
-p {
+* {
     color: rgb(255, 255, 255);
 }
