--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@
     color: rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-style: italic;
+    font-size: 20px;
     margin: 10px;
     padding: 10px;
+    box-sizing: border-box;
 }
 h1 {
     background-color: rgb(88, 59, 27);
@@ -29,9 +31,12 @@ h1 {
     align-items: center;
 }
 p {
-    box-shadow: black 0.5em 0.5em 0.3em;
-    border-radius: 1em;
-    border: solid thick white;
+    width: 350px;
+    background: rgb(0, 0, 0, 0.527);
+    border-radius: 20% 0;
+    box-shadow: 1px 2px 10px #000, 3px 6px 20pv #000;
+    padding: 50px 20px;
+    justify-content: center;
 }
 .serviços-peim {
     border-radius: 50%;
