--- a/style.css
+++ b/style.css
@@ -1,26 +1,10 @@
 @charset "UTF-8";
 * {
-    color: rgb(255, 255, 255);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-style: italic;
+    font-family: 'Raleway', sans-serif;
     font-size: 20px;
-    margin: 10px;
-    padding: 10px;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
-}
-h1 {
-    background-color: rgb(88, 59, 27);
-    text-align: center;
-    padding: 10px;
-}
-.perfil-imagem {
-    
-    float: right;
-    
-    width: 500px;
-    height: 500px;
-    margin: 10px;
-    padding: 10px;
 }
 .perfil {
     background-image: url(imagens/imagem-fundo.png);
@@ -29,14 +13,29 @@ h1 {
     background-position: center center;
     display: flex;
     align-items: center;
+    margin: 100px 100px 100px 100px;
 }
-p {
-    width: 350px;
+.perfil-imagem { 
+    float: right;
+    width: 500px;
+    height: 500px;
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+}
+.perfil-texto {
+    width: 500px;
     background: rgb(0, 0, 0, 0.527);
     border-radius: 20% 0;
     box-shadow: 1px 2px 10px #000, 3px 6px 20pv #000;
-    padding: 50px 20px;
-    justify-content: center;
+    
+    justify-content: left;
+    color: white;
+}
+h1 {
+    background-color: rgb(88, 59, 27);
+    text-align: center;
+    padding: 10px;
 }
 .serviços-peim {
     border-radius: 50%;
