--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
 @charset "UTF-8";
 * {
-    font-family: 'Raleway', sans-serif;
-    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 .perfil {
-    background-image: url(imagens/imagem-fundo.png);
+    background-image: url(imagens/imagem-fundo.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: center;
     display: flex;
     align-items: center;
     margin: 100px 100px 100px 100px;
+    width: 1000px;
+    height: 500px;
 }
 .perfil-imagem { 
-    float: right;
     width: 500px;
     height: 500px;
     margin: 0px;
@@ -25,12 +26,14 @@
 }
 .perfil-texto {
     width: 500px;
-    background: rgb(0, 0, 0, 0.527);
     border-radius: 20% 0;
-    box-shadow: 1px 2px 10px #000, 3px 6px 20pv #000;
-    
+    padding: 50px 40px;
     justify-content: left;
-    color: white;
+    color: black;
+    font-style: italic;
+    font-weight: bold;
+    
+    
 }
 h1 {
     background-color: rgb(88, 59, 27);
