--- a/style.css
+++ b/style.css
@@ -2,36 +2,39 @@
 * {
     font-family: 'Montserrat', sans-serif;
     box-sizing: border-box;
+    margin: 0px;
 }
 header {
     background-image: linear-gradient(to right, rgb(185, 141, 121), rgb(147, 112, 96),rgb(84, 64, 55));
 }
+a {
+    color: black;
+    text-decoration: none;
+}
+a:hover {
+    font-weight: bold;
+    text-decoration: underline;
+}
+a::after {
+    content: ' [link]';
+    font-weight: normal;
+}
 .perfil {
     display: flex;
     align-items: center;
-    height: 400;
-}
-.perfil-imagem {
-    
 }
 .perfil-texto {
     padding: 35px;
+    margin: 0px;
     color: white;
     font-style: italic;
-    font-size: 20px; 
+    font-size: 16px; 
     text-align: justify;   
-}
-p {
-    margin: 0px;
 }
 h1 {
     background-color: rgb(88, 59, 27);
     text-align: center;
     padding: 10px;
-    margin: 0px;
-}
-h2 {
-    margin: 0px;
 }
 .serviços-peim {
     border-radius: 50%;
