--- a/style.css
+++ b/style.css
@@ -5,12 +5,15 @@
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
-    background-color: #d6ccc8da;
     margin: 0px;
+}
+img {
+    max-width: 100%;
+    display: block;
 }
 header {
     display: flex;
-    padding: 0px;
+    padding: 20px;
     margin-top: 0px;
     justify-content: space-between;
     align-items: center;
@@ -21,13 +24,16 @@ header {
     list-style: none;
 }
 .menu-principal li a {
-    display: block;
     padding: 10px;
     margin-left: 25px;
     background: rgba(48, 19, 19, 0.349);
-    color: white;
-    text-decoration: none;
-    
+    color: black;
+    text-decoration: none;   
+}
+main {
+    background-color: white;
+    padding: 0px;
+    margin: 0px;
 }
 .perfil {
     background: rgba(48, 19, 19, 0.349);
@@ -36,28 +42,29 @@ header {
     display: flex;
     align-items: center;
 }
-main {
-    background-color: white;
-    padding: 15px;
-    margin: 15px;
-}
 .perfil-texto {
-    padding: 35px;
+    padding: 100px;
     margin: 0px;
-    color: white;
+    color: black;
     font-style: italic;
     text-align: justify;  
 }
-/*h1 {
-    background-color: rgb(88, 59, 27);
+h1 {
+    background-color: rgba(48, 19, 19, 0.349);
+    color: white;
+    font-size: 20px;
     text-align: center;
     padding: 10px;
 }
-.serviços-peim {
-    border-radius: 50%;
-}*/
+.serviços > img {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 800px;
+    margin: 0 auto;
+    
+}
 footer {
-    color: white;
+    color: black;
     text-align: center;
     padding: 1px;
     margin: 0px;
