--- a/style.css
+++ b/style.css
@@ -6,10 +6,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
     margin: 0px;
-}
-img {
-    max-width: 100%;
-    display: block;
+    background-color: white;
 }
 header {
     display: flex;
@@ -30,19 +27,17 @@ header {
     color: black;
     text-decoration: none;   
 }
-main {
-    background-color: white;
-    padding: 0px;
-    margin: 0px;
-}
 .perfil {
     background: rgba(48, 19, 19, 0.349);
     padding: 0px;
-    margin: 0px;
+    margin: auto;
     display: flex;
     align-items: center;
 }
-.perfil-texto {
+.perfil > img {
+    max-width: 100%;
+}
+.perfil p {
     padding: 100px;
     margin: 0px;
     color: black;
@@ -56,12 +51,9 @@ h1 {
     text-align: center;
     padding: 10px;
 }
-.serviços > img {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 800px;
-    margin: 0 auto;
-    
+.serviços > div > img {
+    max-width: 100%;
+    display: block;
 }
 footer {
     color: black;
