--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 }
 body {
     font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
     margin: 0px;
     padding: 0px;
     background-color: white;
@@ -13,11 +12,13 @@ body {
 }
 header {
     display: flex;
-    padding: 20px;
+    padding: 10px;
     margin-top: 0px;
+    margin-bottom: 10px;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;  
+    flex-wrap: wrap;
+    background-color: rgba(48, 19, 19, 0.349);
 }
 .menu-principal {
     display: flex;
@@ -26,8 +27,9 @@ header {
 .menu-principal li a {
     padding: 10px;
     margin-left: 25px;
+    margin-right: 25px;
     background: rgba(48, 19, 19, 0.349);
-    color: black;
+    color: white;
     text-decoration: none;   
 }
 .perfil {
@@ -41,8 +43,9 @@ header {
     align-items: center;
 }
 .perfil > aside {
-    padding: 120px;
-    margin: 0px;
+    font-size: 18px;
+    margin-left: 20px;
+    margin-right: 140px;
     color: black;
     font-style: italic;
     text-align: justify;  
@@ -53,20 +56,40 @@ header {
     margin-left: 20px;
     margin-top: 100px;
 }
-.serviços > h1 {
+.serviços {
     background-color: rgba(48, 19, 19, 0.349);
     color: white;
-    font-size: 20px;
+    height: 400px;
+}
+h1 {
+    color: white;
+    font-size: 18px;
     text-align: center;
     padding: 10px;
 }
-.serviços > div > img {
-    border-radius: 1px solid black;
-    max-width: 100%;
+.serviços-disponíveis {
     display: flex;
-    flex-wrap: wrap;
+    height: 350px;
+} 
+h2 {
+    font-size: 16px;
+    margin-top: 0px;
 
 }
+#furo-humanizado {
+    height: 350px;
+    width: 340px;
+    margin: 0px;
+}
+#cuidados-bebe {
+    height: 350px;
+    width: 340px;
+}
+#peim {
+    height: 350px;
+    width: 340px;
+}
+
 /*footer {
     color: black;
     text-align: center;
