--- a/style.css
+++ b/style.css
@@ -4,10 +4,8 @@
 }
 body {
     font-family: 'Montserrat', sans-serif;
-    margin: 0px;
-    padding: 0px;
     background-color: white;
-    max-width: 1024px;
+    max-width: 1020px;
     margin: 0 auto;
 }
 header {
@@ -19,6 +17,14 @@ header {
     align-items: center;
     flex-wrap: wrap;
     background-color: rgba(48, 19, 19, 0.349);
+}
+#logo {
+    margin-left: 25px;
+    color: white;
+}
+#logo img, p {
+    margin-bottom: 0px;
+    display: inline-block
 }
 .menu-principal {
     display: flex;
@@ -42,15 +48,17 @@ header {
     display: flex;
     align-items: center;
 }
-.perfil > aside {
-    font-size: 18px;
+.perfil aside {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    text-indent: 35px;
     margin-left: 20px;
     margin-right: 140px;
     color: black;
     font-style: italic;
     text-align: justify;  
 }
-.perfil > img {
+.perfil img {
     border-radius: 50%;
     height: 250px;
     margin-left: 20px;
@@ -69,26 +77,26 @@ h1 {
 }
 .serviços-disponíveis {
     display: flex;
-    height: 350px;
+    height: 350px;   
 } 
-h2 {
-    font-size: 16px;
-    margin-top: 0px;
-
-}
-#furo-humanizado {
+#furo-humanizado, #cuidados-bebe, #peim {
     height: 350px;
     width: 340px;
     margin: 0px;
 }
-#cuidados-bebe {
-    height: 350px;
-    width: 340px;
+#furo-humanizado img, #cuidados-bebe img, #peim img {
+    width: 300px;
+    height: 150px;
 }
-#peim {
-    height: 350px;
-    width: 340px;
+p {
+    text-align: justify;
+    width: 300px;
 }
+h2 {
+    font-size: 16px;
+    margin-top: 0px;
+}
+
 
 /*footer {
     color: black;
