--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background-color: white;
     max-width: 1020px;
     margin: 0 auto;
+
 }
 header {
     display: flex;
@@ -14,17 +15,8 @@ header {
     margin-top: 0px;
     margin-bottom: 10px;
     justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+    align-items: center;  
     background-color: rgba(48, 19, 19, 0.349);
-}
-#logo {
-    margin-left: 25px;
-    color: white;
-}
-#logo img, p {
-    margin-bottom: 0px;
-    display: inline-block
 }
 .menu-principal {
     display: flex;
@@ -38,6 +30,9 @@ header {
     color: white;
     text-decoration: none;   
 }
+main {
+    height: 740px;
+}
 .perfil {
     background-image: url(imagens/imagem-fundo.png);
     background-position: center;
@@ -47,6 +42,7 @@ header {
     margin: auto;
     display: flex;
     align-items: center;
+    height: 320px;
 }
 .perfil aside {
     font-family: 'Times New Roman', Times, serif;
@@ -61,8 +57,8 @@ header {
 .perfil img {
     border-radius: 50%;
     height: 250px;
-    margin-left: 20px;
-    margin-top: 100px;
+    margin-left: 10px;
+    margin-top: 50px;
 }
 .serviços {
     background-color: rgba(48, 19, 19, 0.349);
@@ -73,28 +69,38 @@ h1 {
     color: white;
     font-size: 18px;
     text-align: center;
-    padding: 10px;
+    padding: 15px;
+    margin-bottom: 0px;
+    margin-top: 10px;
 }
 .serviços-disponíveis {
     display: flex;
-    height: 350px;   
+    height: 360px;
+    justify-content: center; 
+    flex-wrap: wrap; 
 } 
-#furo-humanizado, #cuidados-bebe, #peim {
+#furo-humanizado #cuidados-bebe #peim {
     height: 350px;
-    width: 340px;
-    margin: 0px;
+    width: 340px; 
+    flex: 1 1 200px;   
 }
 #furo-humanizado img, #cuidados-bebe img, #peim img {
     width: 300px;
     height: 150px;
+    margin-left: 15px; 
+    margin-right: 15px;   
 }
 p {
     text-align: justify;
     width: 300px;
+    margin-left: 15px; 
+    margin-right: 15px; 
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 h2 {
     font-size: 16px;
-    margin-top: 0px;
+    margin-left: 15px;
 }
 
 
