--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 * {
-    box-sizing: border-box;
+    box-sizing: border-box;   
+}
+a {
+    color: rgba(10, 46, 204, 0.932);
 }
 body {
     font-family: 'Montserrat', sans-serif;
@@ -8,6 +11,7 @@ body {
     max-width: 1020px;
     margin: 0 auto;
     height: 927px;
+    color: white;     
 }
 header {
     display: flex;
@@ -27,7 +31,7 @@ header {
     margin-left: 25px;
     margin-right: 25px;
     background-color: rgba(48, 19, 19, 0.582);
-    color: white;
+    color: white; 
     text-decoration: none;   
 }
 main {
@@ -44,73 +48,57 @@ main {
     height: 320px;
 }
 .perfil aside {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
-    text-indent: 35px;
-    margin-left: 20px;
-    margin-right: 140px;
+    text-indent: 60px;
+    margin: 60px;
     color: black;
     font-style: italic;
     text-align: justify;  
 }
 .perfil img {
     border-radius: 50%;
+    border: 5px solid white;
     height: 250px;
-    margin-left: 10px;
-    margin-top: 50px;
+    margin-left: 15px;
+    margin-top: 45px;
 }
 .serviços {
-    background-color: rgba(48, 19, 19, 0.582);
-    color: white;
-    height: 440px;
+    background-color: rgba(48, 19, 19, 0.582); 
+    height: 400px;
 }
-h1 {
-    color: white;
-    font-size: 18px;
+h3 {
     text-align: center;
     padding: 25px;
     margin-bottom: 0px;
-    margin-top: 10px;
+    margin-top: 10px;  
 }
 .serviços-disponíveis {
     display: flex;
-    height: 388px;
-    justify-content: center; 
+    height: 300px;
+    justify-content: space-evenly;
     flex-wrap: wrap; 
 } 
 #furo-humanizado #cuidados-bebe #peim {
-    height: 350px;
+    height: 300px;
     width: 340px; 
-    flex: 1 1 200px;   
+    flex: 1 1 200px;  
 }
 #furo-humanizado img, #cuidados-bebe img, #peim img {
     width: 300px;
-    height: 150px;
-    margin-left: 15px; 
-    margin-right: 15px;   
+    height: 150px;   
 }
 #furo-humanizado p, #cuidados-bebe p, #peim p {
     text-align: justify;
     width: 300px;
-    margin-left: 15px; 
-    margin-right: 15px; 
-    margin-top: 0px;
-    margin-bottom: 0px;
-    font-size: 15px;
-}
-h2 {
-    font-size: 16px;
-    margin-left: 15px;
+    margin-top: 5px;
+    margin-bottom: 0px;   
 }
 footer {
     margin-top: 10px;
     margin-bottom: 0px;
     background-color: rgba(48, 19, 19, 0.582);
 }
-footer p {
-    color: white;
+footer p {   
     text-align: center;
     padding: 20px;
     margin: 0px;
-    font-size: 15px;
 }
