--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 * {
-    margin: 0px;
-    padding: 0px;
-    border: 0px;
+    margin: 0;
+    padding: 0;
+    border: 0;
     box-sizing: border-box; 
     font-family: 'Open Sans', sans-serif;
     color: #5B5C65;  
@@ -19,32 +19,37 @@ body {
 header {
     display: flex;
     padding: 10px;
-    justify-content: space-between;
+    
     align-items: center;
-    background-image: linear-gradient(45deg, #084177, #687466, #cd8d7b, #fbc490);
+    background-image: linear-gradient(45deg, #084177, #687466);
 }
 .menu-principal {
     display: flex;
     list-style: none;
+    justify-content: space-between;
+}
+.menu-principal img {
+    width: 30px;
+    align-items: center;
 }
 .menu-principal li a {
-    padding: 20px;
     text-decoration: none;
     color: white;
+    align-content: center;
 }
 main {
     height: 750px;
 }
 .perfil {
-    background-image: linear-gradient(45deg, #084177, #687466, #cd8d7b, #fbc490);
+    background-image: linear-gradient(45deg, #084177, #687466);
     padding: 0px;
     display: flex;
     height: 320px;
     margin-bottom: 20px;
     background-size: 300% 300%;
-    animation: colors 15s ease infinite; 
+    animation: color 15s ease infinite; 
 }
-@keyframes colors {
+@keyframes color {
     0% {
         background-position: 0% 50%;
     }
@@ -67,7 +72,8 @@ main {
     font-size: 17px;
     text-align: justify;
     color: white;
-    padding: 70px;  
+    padding: 70px;
+    line-height: 30px;  
 }
 h2 {
     text-align: center;
@@ -105,11 +111,12 @@ h2 {
     border-radius: 0px 0px 1px 1px;  
 }
 footer {
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 0px;
 }
 footer p {   
     text-align: center;
     padding: 20px;
     margin: 0px;
+    font-size: 15px;
 }
