--- a/style.css
+++ b/style.css
@@ -88,19 +88,19 @@ h2 {
     flex-wrap: wrap;
     margin-top: 20px;    
 } 
-.furo-humanizado, .cuidados-bebe, .peim {
+.furo-humanizado, .aplicação-piercing, .cuidados-bebe, .peim {
     width: 300px; 
     height: 325px;
     background-color: #e4ddd933;
     border-radius: 10px;
     box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.466);
 }
-.furo-humanizado img, .cuidados-bebe img, .peim img {
+.furo-humanizado img, .aplicação-piercing img, .cuidados-bebe img, .peim img {
     width: 300px;
     height: 150px; 
     border-radius: 8px 8px 0px 0px;  
 }
-.furo-humanizado p, .cuidados-bebe p, .peim p {
+.furo-humanizado p, .aplicação-piercing p, .cuidados-bebe p, .peim p {
     text-align: justify;
     width: 270px;
     height: 180px; 
