--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@ a {
 body {
     background-color: #F7F7F7;
     max-width: 1070px;
+    min-width: 320px;
     margin: 0 auto;
     height: 927px;     
 }
 header {
     display: flex;
     padding: 10px;
-    
     align-items: center;
     background-image: linear-gradient(45deg, #084177, #687466);
 }
@@ -30,7 +30,6 @@ header {
 }
 .menu-principal img {
     width: 30px;
-    align-items: center;
 }
 .menu-principal li a {
     text-decoration: none;
@@ -45,7 +44,7 @@ main {
     padding: 0px;
     display: flex;
     height: 320px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     background-size: 300% 300%;
     animation: color 15s ease infinite; 
 }
@@ -63,8 +62,7 @@ main {
 .perfil img {
     border-radius: 50%;
     border: 5px solid white;
-    margin-left: 30px;
-    margin-top: 28px;
+    
 }
 .perfil aside {
     text-indent: 60px;
@@ -83,30 +81,30 @@ h2 {
 }
 .serviços-disponíveis {
     display: flex;
-    height: 325px;
+    height: 330px;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-top: 20px;    
+    margin-top: 10px;    
 } 
 .furo-humanizado, .aplicação-piercing, .cuidados-bebe, .peim {
-    width: 300px; 
-    height: 325px;
+    width: 220px; 
+    height: 330px;
     background-color: #e4ddd933;
     border-radius: 10px;
     box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.466);
 }
 .furo-humanizado img, .aplicação-piercing img, .cuidados-bebe img, .peim img {
-    width: 300px;
+    width: 220px;
     height: 150px; 
     border-radius: 8px 8px 0px 0px;  
 }
 .furo-humanizado p, .aplicação-piercing p, .cuidados-bebe p, .peim p {
     text-align: justify;
-    width: 270px;
-    height: 180px; 
+    width: 200px;
+    height: 140px; 
     margin-top: 5px;
     margin-bottom: 0px; 
-    margin-left: 15px; 
+    margin-left: 10px; 
     margin-right: -10px;
     border-radius: 0px 0px 1px 1px;  
 }
