--- a/style.css
+++ b/style.css
@@ -7,30 +7,31 @@
     font-family: 'Open Sans', sans-serif;
     color: #5B5C65;  
 }
-a {
-    color: rgba(0, 0, 255, 0.61);
-}
 body {
     max-width: 1070px;
     min-width: 320px;
     margin: 0 auto;
-    height: 927px;     
+    height: 927px;
+    padding-left: 10px; 
+    padding-right: 10px;    
 }
 header {
-    display: flex;
+    
     padding: 10px;
     align-items: center;
     background: linear-gradient(45deg, #055a79, #1eb491) 
 }
-.menu-principal {
+.menu {
     display: flex;
     list-style: none;
     justify-content: space-between;
 }
-.menu-principal img {
+.contatos img {
     width: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
-.menu-principal li a {
+.menu li a {
     text-decoration: none;
     color: white;
     align-content: center;
@@ -45,11 +46,14 @@ main {
     padding: 0px;
     height: 320px;
     margin-bottom: 10px;
+    justify-content: center;
+    align-items: center;
 } 
 .perfil img {
     border-radius: 50%;
     border: 5px solid white;
-    
+    padding: 5px;
+    margin-left: 25px;
 }
 .perfil aside {
     text-indent: 60px;
@@ -97,11 +101,10 @@ h2 {
 }
 footer {
     margin-top: 20px;
-    margin-bottom: 0px;
-}
-footer p {   
+    margin-bottom: 0px;  
     text-align: center;
     padding: 20px;
     margin: 0px;
     font-size: 15px;
+    font-style: italic;
 }
