--- a/style.css
+++ b/style.css
@@ -18,29 +18,41 @@ body {
 header { 
     padding: 10px;
     align-items: center;
-    background: linear-gradient(45deg, #055a79, #1eb491);  
+    background: linear-gradient(45deg, #055a79, #1eb491);     
 }
 .menu {
     display: flex;
     justify-content: space-between; 
-    align-content: center;   
+    align-content: center;      
 }
-.menu a, li {
+.menu li, a {
     text-decoration: none;
     list-style: none;
     color: white;
-   
 }
-ul.contatos {
-    display: flex;  
+.agenda {
+    margin-left: 50px;
+    padding: 5px;
+    border: 2px solid white;
+    background-color: #10888C;   
+}
+.contatos {
+    display: flex;
+    padding: 5px;     
 }
 .contatos p {
     color: white;
 }
 .contatos img {
-    width: 25px;
-    margin-left: 15px;
-    margin-right: 15px;
+    width: 25px;   
+}
+.canais-contato {
+    width: 35px;
+    height: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 10px;
+    
 }
 main {
     height: 750px;
